Workaround for illegal reflective access on Java 17+