@@ -21,7 +21,7 @@
 		<dependency>
 		  <groupId>junit</groupId>
 		  <artifactId>junit</artifactId>
-		  <version>4.13</version>
+		  <version>4.13.2</version>
 		  <scope>test</scope>
 		</dependency>
   	</dependencies>
@@ -103,7 +103,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M4</version>
+						<version>3.0.0-M6</version>
 						<configuration>
 							<includes>
 								<include>**/*EpsilonJenkinsTest*</include>
@@ -122,7 +122,7 @@
 			</build>
 			<properties>
 				<packaging.type>eclipse-plugin</packaging.type>
-				<argLine>-ea -Xmx3g</argLine>
+				<argLine>-ea -Xmx3g --add-opens=java.base/java.util.stream=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</argLine>
 			</properties>
 		</profile>
 		<profile>
@@ -142,7 +142,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M4</version>
+						<version>3.0.0-M6</version>
 						<configuration>
 							<includes>
 								<include>**/*EpsilonSurefireTest*</include>
